fix the images layout issue

--- a/index.css
+++ b/index.css
@@ -35,6 +35,7 @@ body {
 .book {
   position: relative;
   width: 350px;
+  height: 500px;
   transition: transform 0.5s;
 }
 
@@ -54,7 +55,6 @@ body {
 
 .front,
 .back {
-  background-color: white;
   transform-origin: right;
   transition: transform 0.5s;
 }
@@ -62,7 +62,7 @@ body {
 .front {
   z-index: 1;
   backface-visibility: hidden;
-  border-right: 3px solid powderblue;
+  /* border-right: 3px solid powderblue; */
 }
 
 .back {
@@ -80,6 +80,11 @@ body {
 
 .back-content {
   transform: rotateY(180deg);
+}
+
+img {
+  height: 100%;
+  object-fit: cover;
 }
 
 /* Paper flip effect */
